fix javadoc generation, add openjavadoc command. add small showcase with simpleSquareRendering